tests/reference/run-derived_type_06-2623a81.stderr
semantic error: The expression with derived types contains two or more arrays.
  --> tests/errors/derived_type_06.f90:14:5
   |
14 |     main_arr%arr_2%num = 22
   |     ^^^^^^^^^^^^^^^^^^ 
